Project Umihiko {
database_type: 'PostgreSQL'
note: '''
  # Umihiko Database
'''
}

Table users {
  id integer [primary key, unique]
  cognito_user_id integer [unique]
  name varchar [not null]
  email varchar [not null]
  summary text
  introducton text
  picture_url varchar
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table articles {
  id integer [primary key]
  user_id varchar [not null, ref: > users.id]
  title varchar [not null]
  body_as_markdown text [not null]
  body_as_html text [not null]
  keywords text
  thumbnail_url varchar
  publish_date date [default: `now()`]
  expire_date date
  available boolean [default: false]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table article_tag {
  id integer [primary key]
  article_id integer [ref: > articles.id]
  tag_id integer [ref: > tags.id]
}

Table tags {
  id integer [primary key]
  name varchar [not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table links {
  id integer [primary key]
  name varchar [not null]
  url varchar [not null]
  comment varchar
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table projects {
  id integer [primary key]
  name varchar [not null]
  summary varchar
  detail text
  start_date date
  end_date date
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table programing_languages {
  id integer [primary key]
  name varchar [not null]
  experience_period varchar
  skilled boolean [default: false]
  like boolean [default: false]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table frameworks {
  id integer [primary key]
  name varchar [not null]
  experience_period varchar
  skilled boolean [default: false]
  like boolean [default: false]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table operating_systems {
  id integer [primary key]
  name varchar [not null]
  experience_period varchar
  skilled boolean [default: false]
  like boolean [default: false]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table databases {
  id integer [primary key]
  name varchar [not null]
  experience_period varchar
  skilled boolean [default: false]
  like boolean [default: false]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table services {
  id integer [primary key]
  name varchar [not null]
  experience_period varchar
  skilled boolean [default: false]
  like boolean [default: false]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table tools {
  id integer [primary key]
  name varchar [not null]
  experience_period varchar
  skilled boolean [default: false]
  like boolean [default: false]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table qualifications {
  id integer [primary key]
  name varchar [not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table educations {
  id integer [primary key]
  name varchar [not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}
